# CNN_NumberDetector

./: .gitignore  .gitmodules  README.MD  number_detector.py
01_Keras/: ConvMnist.py  ConvMnist_3ch.py  ConvMnist_from_image_files.py  ConvMnist_from_image_files_generator.py  conv_mnist.h5  number_detector_3ch.py  save_mnist_image.py
02_Tensorflow_Python/: conv_mnist.pb  conv_mnist.pb_param.json  keras_to_tensorflow.py  keras_to_tensorflow2.py  mobilenet.py  number_detector_tensorflow.py
02_Tensorflow_Python/conv_mnist_pb/: saved_model.pbtxt
02_Tensorflow_Python/conv_mnist_pb/variables/: variables.data-00000-of-00001  variables.index
03.01_Tensorflow_C_MobileNet/: CMakeLists.txt  README.MD  main.cpp
03.01_Tensorflow_C_MobileNet/libtensorflow/: download_from.txt
03_Tensorflow_C/: CMakeLists.txt  main.cpp
03_Tensorflow_C/libtensorflow/libtensorflow-cpu-linux-x86_64-1.12.0/: get_lib_from.txt
03_Tensorflow_C/libtensorflow/libtensorflow-cpu-windows-x86_64-1.12.0/: get_lib_from.txt
03_Tensorflow_C/resource/: conv_mnist.pb
04_TensorflowLite_Python/: conv_mnist.tflite  keras_to_tflite.py  mnist_test.py  number_detector_tflite.py
05_TensorflowLite_CPP/: CMakeLists.txt  main.cpp
05_TensorflowLite_CPP/cmakes/: RASPI_CROSS.cmake
06_MobileNetV2/: keras_to_tflite.py  retrain_mobilenetv2.py  test_mobilenetv2.py
07_TensorflowLite_TPU/: classify_image_mnist.py  conv_mnist.h5  convert.txt  mnist_labels.txt
08_TensorflowLite_TPU_CPP/: CMakeLists.txt  README.MD  conv_mnist.tflite  conv_mnist_edgetpu.tflite  main.cpp  main_without_opencv.cpp  utils.cc
08_TensorflowLite_TPU_CPP/cmakes/: JETSON_NATIVE.cmake  RASPI_NATIVE.cmake  common.cmake
